// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`appConfiguration all 1`] = `
{
  "$dollarkey": "dollarkey value",
  ".appconfig.featureflag/Fruit/Apples": "{"id":"Apples","description":"","enabled":false,"conditions":{"client_filters":[]}}",
  ".appconfig.featureflag/SuperThing": "{"id":"SuperThing","description":"","enabled":false,"conditions":{"client_filters":[]}}",
  ".leadingdot": ".leadingdot value",
  "coloned:key": "coloned:key value",
  "dotted.key": "dotted.key value",
  "key1": "key1 value",
  "key2": "key2 value",
  "key3": "key3 label3 value",
  "ref kv secret 1": "{"uri":"https://kv-appconfig-test-aue.vault.azure.net/secrets/kv-secret-1"}",
  "slash/separated/key": "slash/separated/key value",
  "underscored_key": "underscored_key value",
}
`;

exports[`appConfiguration key3 and label3 1`] = `
{
  "key3": "key3 label3 value",
}
`;

exports[`appConfiguration multiple key1,key2 1`] = `
{
  "key1": "key1 value",
  "key2": "key2 value",
}
`;

exports[`appConfiguration no labels 1`] = `
{
  "$dollarkey": "dollarkey value",
  ".appconfig.featureflag/Fruit/Apples": "{"id":"Apples","description":"","enabled":false,"conditions":{"client_filters":[]}}",
  ".appconfig.featureflag/SuperThing": "{"id":"SuperThing","description":"","enabled":false,"conditions":{"client_filters":[]}}",
  ".leadingdot": ".leadingdot value",
  "coloned:key": "coloned:key value",
  "dotted.key": "dotted.key value",
  "key1": "key1 value",
  "key2": "key2 value",
  "ref kv secret 1": "{"uri":"https://kv-appconfig-test-aue.vault.azure.net/secrets/kv-secret-1"}",
  "slash/separated/key": "slash/separated/key value",
  "underscored_key": "underscored_key value",
}
`;

exports[`appConfiguration nulls 1`] = `
{
  "$dollarkey": "dollarkey value",
  ".appconfig.featureflag/Fruit/Apples": "{"id":"Apples","description":"","enabled":false,"conditions":{"client_filters":[]}}",
  ".appconfig.featureflag/SuperThing": "{"id":"SuperThing","description":"","enabled":false,"conditions":{"client_filters":[]}}",
  ".leadingdot": ".leadingdot value",
  "coloned:key": "coloned:key value",
  "dotted.key": "dotted.key value",
  "key1": "key1 value",
  "key2": "key2 value",
  "key3": "key3 label3 value",
  "ref kv secret 1": "{"uri":"https://kv-appconfig-test-aue.vault.azure.net/secrets/kv-secret-1"}",
  "slash/separated/key": "slash/separated/key value",
  "underscored_key": "underscored_key value",
}
`;

exports[`appConfiguration single key1 1`] = `
{
  "key1": "key1 value",
}
`;

exports[`appConfiguration single label2 1`] = `
{
  "key3": "key3 label2 value",
}
`;

exports[`appConfiguration wildcard key* 1`] = `
{
  "key1": "key1 value",
  "key2": "key2 value",
  "key3": "key3 label3 value",
}
`;

exports[`appConfiguration wildcard label* 1`] = `
{
  "key3": "key3 label3 value",
}
`;
